solve retry button overflow

--- a/styles.css
+++ b/styles.css
@@ -93,18 +93,19 @@ canvas {
 .messages {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   margin: 0 auto;
   margin-bottom: 12px;
   width: 80%;
-  max-width: 460px;
+  max-width: 600px;
   height: fit-content;
 }
 p {
   display: block;
-  margin: 0;
   width: 100%;
   color: var(--white);
   font-size: 2.5rem;
+  text-align: center;
 }
 .retry-container {
   display: flex;
@@ -136,6 +137,9 @@ p {
     margin-right: 12px;
     width: fit-content;
   }
+  .messages__result {
+    width: 100%;
+  }
   .messages__lives span {
     font-size: 2rem;
   }
@@ -148,7 +152,8 @@ p {
     margin-right: 12px;
   }
   .messages {
-    margin: 0 200px;
     margin-top: 12px;
+    margin-left: 200px;
+    margin-right: 200px;
   }
 }
